--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sideBar">
+            <div class="siderBar-bg">
+                <ul>
 
-
-
-
+                </ul>
+            </div>
+        </div>
+        <div class="main"></div>
+    </div>
     <script src="/index.js"></script>
 </body>
 </html>
